adding search, new field and data validation

--- a/FirstApplicationInWeb/Views/Movies/Index.cshtml
+++ b/FirstApplicationInWeb/Views/Movies/Index.cshtml
@@ -8,6 +8,16 @@
 
 <p>
     @Html.ActionLink("Create New", "Create")
+
+    @using (Html.BeginForm("Index","Movies",FormMethod.Get))
+    {
+    <p>
+        Genre: @Html.DropDownList("movieGenre", "All")
+        Title: @Html.TextBox("SearchString") <br />
+        <input type="submit" value="Filter" />
+    </p>
+    }
+    
 </p>
 <table class="table">
     <tr>
@@ -22,6 +32,9 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Rating)
         </th>
         <th></th>
     </tr>
@@ -40,6 +53,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.Price)
         </td>
+        <th>
+            @Html.DisplayFor(modelItem => item.Rating)
+        </th>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ID }) |
