--- a/FirstApplicationInWeb/Views/Movies/Details.cshtml
+++ b/FirstApplicationInWeb/Views/Movies/Details.cshtml
@@ -50,6 +50,14 @@
             @Html.DisplayFor(model => model.Rating)
         </dd>
 
+        <dt>
+            Picture
+        </dt>
+
+        <dd>
+            <img src="@Url.Content(Model.PictureUrl)" />
+        </dd>
+
     </dl>
 </div>
 <p>
