--- a/FirstApplicationInWeb/Views/Movies/Index.cshtml
+++ b/FirstApplicationInWeb/Views/Movies/Index.cshtml
@@ -59,7 +59,8 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID }) |
+            @Html.ActionLink("PictureUpload","PictureUpload", new { id=item.ID})
         </td>
     </tr>
 }
